[tool.poetry]
name = "drukarnia-api"
version = "0.1.0"
description = ""
authors = [
    "Psychotim <balduev.desco@mail.ru>",
    "androu"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.0b0"
attrdict = "2.0.1"
fake-useragent = "1.1.3"
attrs = "23.2.0"
typeguard = "^4.1.5"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
ruff = "^0.2.2"


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120  # if active, remove E501 from ignore
lint.select = ["ALL"]
lint.ignore = ["D1", "D203", "D213", "FA102", "ANN101", "UP007", "FA100", "COM812", "ISC001", "ANN401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
